Note, the changes for the last OFFICIAL release start with release
_+_A HREF="#2.2.4"_-_2.2.4_+_/A_-_.

Changes in beta release 2.3.16 (not released yet)

Changes in beta release 2.3.15 (February 2000)

* Reduced memory usage of multiple window styles.

* Documented previously undocumented GotoDeskAndPage command.

* New parameter 'prev' for GotoDesk, GotoDeskAndPage and MoveToDesk
  commands.

Changes in beta release 2.3.14 (February 2000)

* New style option ParentalRelativity to enable Fvwm modules to use
  'Transparent' colorsets from FvwmTheme.  'Opacity' turns it off.

* The GlobalOpts command was removed in favour of individual
  window styles.  Please look for GlobalOpts in the man page to
  find out how to get the old functionality.

* The WindowshadeAnimate command was replaced with the
  WindowshadeSteps window style.

* New MenuStyle option SelectOnRelease to better emulate Alt-Tab.
  Same option for WindowList command.

Changes in beta release 2.3.13 (January 2000)

* New FvwmTheme option 'Transparent'.

* New style option 'IconFont'.

* New style option 'Font' replaces the old WindowFont command.

Changes in beta release 2.3.12 (December 1999)

* New command PointerKey.  Similar to 'Key' command but binds
  keystrokes to the window under the pointer instead of the window
  that has the keyboard focus.

* New WindowList options NoOnBottom, OnBottom and OnlyOnBottom.

* New FvwmTheme colorset options 'Plain' and 'NoShape'.

* New window styles HilightFore, HilightBack and HilightColorset
  replace the old commands HilightColor and HilightColorset.

* The ButtonStyle, TitleStyle and BorderStyle commands take effect
  immediately, without a Recapture.

* The WindowList menu uses the WindowList menu style if it is
  defined.

* The CursorStyle command accepts two new cursors: 'None' for no
  cursor and 'Tiny' for a single pixel cursor.

* A new configurable script fvwm-menu-headlines to show headlines