@@ -43,6 +43,8 @@
 #define SUSE_PARENT_RELATIVE(sf)      ((sf)->use_parent_relative)
 #define SUSE_COLORSET(sf)             ((sf)->use_colorset)
 #define SUSE_COLORSET_HI(sf)          ((sf)->use_colorset_hi)
+#define SUSE_BORDER_COLORSET(sf)      ((sf)->use_border_colorset)
+#define SUSE_BORDER_COLORSET_HI(sf)   ((sf)->use_border_colorset_hi)
 #define SUSE_LAYER(sf)                ((sf)->use_layer)
 #define SUSE_NO_PPOSITION(sf)         ((sf)->use_no_pposition)
 #define SUSE_START_ON_DESK(sf)        ((sf)->use_start_on_desk)
@@ -354,8 +356,12 @@
 #define SSET_WINDOW_FONT(s,x)         ((s).window_font = (x))
 #define SGET_COLORSET(s)              ((s).colorset)
 #define SSET_COLORSET(s,x)            ((s).colorset = (x))
+#define SSET_BORDER_COLORSET(s,x)     ((s).border_colorset = (x))
+#define SGET_BORDER_COLORSET(s)       ((s).border_colorset)
 #define SGET_COLORSET_HI(s)           ((s).colorset_hi)
 #define SSET_COLORSET_HI(s,x)         ((s).colorset_hi = (x))
+#define SGET_BORDER_COLORSET_HI(s)    ((s).border_colorset_hi)
+#define SSET_BORDER_COLORSET_HI(s,x)  ((s).border_colorset_hi = (x))
 #define SGET_FLAGS_POINTER(s)         (&((s).flags))
 #define SGET_BORDER_WIDTH(s)          ((s).border_width)
 #define SSET_BORDER_WIDTH(s,x)        ((s).border_width = (x))
